# spildspotter

./: .dockerignore  .gcloudignore  .gitignore  .mcp.json  Dockerfile  README.md  app.py  cloudbuild.yaml  deploy.sh  download_product_images.py  evidence.config.yaml  justfile  package-lock.json  package.json  prek.toml  pyproject.toml  ruff.toml  salling_food_waste_pipeline.py  start.sh  ty.toml
.dlt/: config.toml
.evidence/customization/: .profile.json
.github/workflows/: deploy.yml  railway_deploy.yml  redeploy.yml
evidence-app/: evidence.config.yaml  package.json
evidence-app/pages/: +layout.svelte  index.md  store.md
evidence-app/sources/food_waste/: connection.yaml  stores.sql
food_waste/: hourly_busyness.sql
pages/: +layout.svelte  index.md  store.md
shadcn-chat/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
shadcn-chat/backend/: main.py  requirements.txt
shadcn-chat/src/app/: globals.css  layout.tsx  page.tsx
shadcn-chat/src/app/recipe/: page.tsx
shadcn-chat/src/components/chat/: chat-interface.tsx  chat-message.tsx  clearance-panel.tsx  example-prompts.tsx  mobile-clearance-panel.tsx  (+1 more)
shadcn-chat/src/hooks/: use-chat-store.ts
shadcn-chat/src/lib/: api.ts  utils.ts
shadcn-chat/src/types/: index.ts
sources/food_waste/: clearances.sql  hourly_busyness.sql  stores.sql
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/backend/: main.py  pyproject.toml  ty.toml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/hooks/: use-chat-store.ts
web/src/lib/: api.ts  utils.ts
(+28 files in other folders)
