[project]
name = "spildspotter"
version = "0.1.0"
description = "Food waste data app using Salling Group clearance data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[workspace]>=1.20.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "loguru>=0.7.3",
]

[dependency-groups]
ai-app = [
    "duckdb>=1.4.3",
    "google-auth>=2.45.0",
    "google-genai>=1.56.0",
    "gradio>=6.2.0",
]
