[project]
name = "spildspotter"
version = "0.1.0"
description = "Food waste data app using Salling Group clearance data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[workspace]>=1.20.0",
    "requests>=2.31.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "ty>=0.0.1a0",
    "prek>=0.1.0",
]
